<resources>
    <string name="app_name">Elemental Community</string>
    <string name="result_name">Result Name</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="result_unknown_wanna_add_your_own">Result unknown! Wanna add your own?</string>
    <string name="community_suggestions">Community suggestions:</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="start">Start</string>
    <string name="suggest">Improve</string>
    <string name="back">Back</string>
    <string name="please_choose_name">Please choose the resulting element!</string>
    <string name="please_choose_color">Please select the element color!</string>
    <string name="only_az09">Only A-Za-z0-9, space, minus, comma, dot, *, / and \' are allowed!</string>
    <string name="sent">Sent!</string>
    <string name="reset_everything">Reset Everything</string>
    <string name="settings">Settings</string>
    <string name="are_you_sure_reset_everything">Are you sure that you want to delete all your progress?</string>
    <string name="tree_view">Tree View</string>
    <string name="random_suggestion">Random Suggestion</string>
    <string name="component_a">Component A</string>
    <string name="component_b">Component B</string>
    <string name="skip_that">Skip</string>
    <string name="favourites">Favourites: #count</string>
    <string name="frequency_of_asking_title">Frequency of asking for suggestions: #frequency</string>
    <string name="no_result_found">No result was found!</string>
    <string name="show_unlock_counter">Show unlock counter</string>
    <string name="diamond_example">512</string>
    <string name="recipe_lookup">Recipe Lookup:</string>
    <string name="recipe_lookup_short">lookup</string>
    <string name="lookup_cost">10 / lookup</string>
    <string name="cost_template">#cost / #name</string>
    <string name="upload_progress_to_server">Upload progress to server</string>
    <string name="download_progress_from_server">Download progress from server</string>
    <string name="save_progress">Save progress</string>
    <string name="load_progress">Load progress</string>
    <string name="save_progress_to_file">Save progress to file</string>
    <string name="load_progress_from_file">Load progress from file</string>
    <string name="please_enter_the_password">Please enter the password!</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="override_old_data">Delete old achievements</string>
    <string name="merge_achievements">Merge achievements</string>
    <string name="success">Success!</string>
    <string name="this_is_your_password">This is your password:</string>
    <string name="choose">Choose</string>
    <string name="please_select_the_file">Please select the file</string>
    <string name="save_progress_to_name">Save progress to #name</string>
    <string name="load_progress_from_name">Load progress from #name</string>
    <string name="please_select_a_file">Please select a file!</string>
    <string name="switch_server">Switch Server (kind of deprecated)</string>
    <string name="settings_help">Hold down long on a button to get more information.</string>
    <string name="switch_to_default">Switch to default</string>
    <string name="join_that_server">Join that server</string>
    <string name="server_name">Server Name</string>
    <string name="community">Community</string>
    <string name="create_your_own_server">Create your own server</string>
    <string name="create_your_own_server2">Create your own server!</string>
    <string name="server_creation_message">Creating your own server allows you to have different recipes than on the default server. It might be useful for your own community, like your YouTube channel.</string>
    <string name="show_element_uuids">Display element ids</string>
    <string name="clear_recipe_cache">Clear Recipe Cache</string>
    <string name="mandala_view">Mandala View</string>
    <string name="search">Search</string>
    <string name="what_you_are_searching">What you are searching</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="background_music_volume">Background Music Volume: #percent</string>
    <string name="itempedia">Itempedia</string>
    <string name="close">Close</string>
    <string name="crafting_count_disclaimer">*Crafting count has been an estimation for many years now, as it isn\'t tracked 1:1, but more like 1:30.</string>
    <string name="creation_date_title">Creation Date:</string>
    <string name="crafting_count_title">Times Crafted* (Result):</string>
    <string name="crafting_count_as_component">Times Crafted* (Component):</string>
    <string name="number_of_recipes">#Recipes (Result):</string>
    <string name="times_used_as_component">#Recipes (Component):</string>
    <string name="suggestions_for_recipes">#Suggestions (Result):</string>
    <string name="times_suggested_as_component">#Suggestions (Component):</string>
    <string name="itempedia_stats">Element Statistics</string>
    <string name="unique_identifier">Unique Identifier:</string>
    <string name="captcha_title">Are you a robot?</string>
    <string name="captcha_instructions">If not, Crack the Safe!</string>
    <string name="color_theme_title">Color Theme:</string>
    <string name="default_style_name">Default</string>
    <string name="dark_style_name">Dark</string>
    <string name="neon_style_name">Neon</string>
    <string name="light_style_name">Light</string>
    <string name="history_in_3d">History in 3D</string>
    <string name="element_name">Element Name</string>
</resources>
