<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@color/colorPrimaryDark"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/settings_help"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/switchServer"
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:layout_marginTop="10dp"
                android:text="@string/switch_server"
                android:gravity="center"
                android:textSize="30sp"
                android:background="@color/colorGreen2"
                android:textColor="@color/colorGreen"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/favTitle"
                android:text="@string/favourites"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryText"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <SeekBar
                android:id="@+id/favSlider"
                android:thumbTint="@color/colorPrimaryDark"
                android:progressTint="@color/colorPrimaryDark"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

        <TextView
                android:id="@+id/frequencyTitle"
                android:text="@string/frequency_of_asking_title"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryText"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <SeekBar
                android:id="@+id/frequencySlider"
                android:thumbTint="@color/colorPrimaryDark"
                android:progressTint="@color/colorPrimaryDark"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

        <androidx.appcompat.widget.SwitchCompat
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:id="@+id/craftingCountsSwitch"
                android:text="@string/show_unlock_counter"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryText"
                android:padding="10dp"
                android:checked="true"
                android:theme="@style/SwitchColors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.SwitchCompat
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:id="@+id/displayUUIDSwitch"
                android:text="@string/show_element_uuids"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryText"
                android:padding="10dp"
                android:checked="true"
                android:theme="@style/SwitchColors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/clearRecipeCache"
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:layout_marginTop="10dp"
                android:text="@string/clear_recipe_cache"
                android:gravity="center"
                android:textSize="30sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryText"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/saveProgress"
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:layout_marginTop="10dp"
                android:text="@string/save_progress"
                android:gravity="center"
                android:textSize="30sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryText"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/loadProgress"
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:layout_marginTop="10dp"
                android:text="@string/load_progress"
                android:gravity="center"
                android:textSize="30sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryText"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:id="@+id/resetEverythingButton"
                android:layout_marginTop="10dp"
                android:text="@string/reset_everything"
                android:gravity="center"
                android:textSize="30sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryText"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:id="@+id/back2"
                android:text="@string/back"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="30sp"
                android:background="@color/colorGreen2"
                android:textColor="@color/colorGreen"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>