<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/captcha_title"
        android:textColor="#000"
        android:textSize="35sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/captcha_instructions"
        android:textColor="#000"
        android:textSize="20sp" />

    <me.antonio.noack.webdroid.CaptchaView
        android:id="@+id/captchaView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorGreen2"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryText"
        android:textSize="30sp" />

</LinearLayout>